--- a/test1.html
+++ b/test1.html
@@ -124,7 +124,7 @@
 <!-- AMD Ryzen 5 5500 System Unit + RX 580 -->
     <div class="ad-container">
         <div class="image">
-            <img src="C:\Users\Workstation\Desktop\pc2.jpg" alt="AMD Ryzen 5 5500 System Unit + RX 580">
+            <img src="pc2.jpg" alt="AMD Ryzen 5 5500 System Unit + RX 580">
         </div>
         <div class="price">PHP 19,995</div>
         <div class="title">AMD Ryzen 5 5500 System Unit + RX 580</div>
@@ -154,7 +154,7 @@
     <!-- AMD Ryzen 5 5600G System Unit -->
     <div class="ad-container">
         <div class="image">
-            <img src="C:\Users\Workstation\Desktop\pc3.jpg" alt="AMD Ryzen 5 5600G System Unit">
+            <img src="pc3.jpg" alt="AMD Ryzen 5 5600G System Unit">
         </div>
         <div class="price">PHP 15,995</div>
         <div class="title">AMD Ryzen 5 5600G System Unit</div>
@@ -183,7 +183,7 @@
     <!-- AMD Ryzen 5 5600G System Unit (Second Version) -->
     <div class="ad-container">
         <div class="image">
-            <img src="C:\Users\Workstation\Desktop\pc4.jpg" alt="AMD Ryzen 5 5600G System Unit">
+            <img src="pc4.jpg" alt="AMD Ryzen 5 5600G System Unit">
         </div>
         <div class="price">PHP 15,995</div>
         <div class="title">AMD Ryzen 5 5600G System Unit</div>
@@ -214,7 +214,7 @@
 <!-- First System Unit Ad (AMD Ryzen 5 5600 + GTX 1650) -->
     <div class="ad-container">
         <div class="image">
-            <img src="C:\Users\Workstation\Desktop\pc5.jpg" alt="AMD Ryzen 5 5600 System Unit">
+            <img src="pc5.jpg" alt="AMD Ryzen 5 5600 System Unit">
         </div>
         <div class="price">PHP 25,995</div>
         <div class="title">AMD Ryzen 5 5600 System Unit + GTX 1650</div>
@@ -243,7 +243,7 @@
 <!-- Second System Unit Ad (AMD Ryzen 5 5600 + RX 6600) -->
     <div class="ad-container">
         <div class="image">
-            <img src="C:\Users\Workstation\Desktop\pc6.jpg" alt="AMD Ryzen 5 5600 System Unit + RX 6600">
+            <img src="pc6.jpg" alt="AMD Ryzen 5 5600 System Unit + RX 6600">
         </div>
         <div class="price">PHP 29,995</div>
         <div class="title">AMD Ryzen 5 5600 System Unit + RX 6600</div>
@@ -273,7 +273,7 @@
 <!-- Messenger System Ad -->
     <div class="ad-container">
         <div class="image">
-            <img src="C:\Users\Workstation\Desktop\pc7.jpg" alt="Messenger System Unit">
+            <img src="pc7.jpg" alt="Messenger System Unit">
         </div>
         <div class="price">PHP 24,950</div>
         <div class="title">Messenger System Unit</div>
@@ -303,7 +303,7 @@
 <!-- Yojimbo PC Offer -->
     <div class="ad-container">
         <div class="image">
-            <img src="C:\Users\Workstation\Desktop\pc8.jpg" alt="Yojimbo PC Offer">
+            <img src="pc8.jpg" alt="Yojimbo PC Offer">
         </div>
         <div class="price">PHP 29,995</div>
         <div class="title">Yojimbo PC Offer</div>
@@ -336,7 +336,7 @@
 <!-- AMD Ryzen 7 5700X System Unit + RTX 3060 -->
     <div class="ad-container">
         <div class="image">
-            <img src="C:\Users\Workstation\Desktop\pc9.jpg" alt="AMD Ryzen 7 PC Offer">
+            <img src="pc9.jpg" alt="AMD Ryzen 7 PC Offer">
         </div>
         <div class="price">PHP 44,995</div>
         <div class="title">AMD Ryzen 7 5700X System Unit + RTX 3060</div>
@@ -367,7 +367,7 @@
 <!-- Intel i5-12400 System Unit + RTX 3060 -->
     <div class="ad-container">
         <div class="image">
-            <img src="C:\Users\Workstation\Desktop\pc10.jpg" alt="Intel i5-12400 PC Offer">
+            <img src="pc10.jpg" alt="Intel i5-12400 PC Offer">
         </div>
         <div class="price">PHP 44,995</div>
         <div class="title">Intel Core i5-12400 System Unit + RTX 3060</div>
@@ -396,7 +396,7 @@
 <!-- AMD Ryzen 5 9600X System Unit + RX 7800 -->
     <div class="ad-container">
         <div class="image">
-            <img src="C:\Users\Workstation\Desktop\pc11.jpg" alt="System Unit Image">
+            <img src="pc11.jpg" alt="System Unit Image">
         </div>
         <div class="price">PHP 77,995</div>
         <div class="title">AMD Ryzen 5 9600X System Unit + RX 7800</div>
@@ -426,7 +426,7 @@
 <!-- DIONYSUS System Unit -->
     <div class="ad-container">
         <div class="image">
-            <img src="C:\Users\Workstation\Desktop\pc12.jpg" alt="Dionysus System Unit">
+            <img src="pc12.jpg" alt="Dionysus System Unit">
         </div>
         <div class="price">PHP 134,495</div>
         <div class="title">DIONYSUS</div>
